[package]
name = "reactive_crypto"
version = "0.1.0"
authors = ["Gianluca Scopelliti <gianlu.1033@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.3"

# use "64-bits" branch if you want 64 bits of security
spongent = { git = "https://github.com/AuthenticExecution/spongent-rs"}
